# finn-cli

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
src/: api.rs  lib.rs  main.rs  model.rs  output.rs
tests/: cli.rs  search_client.rs
tests/fixtures/: categories_response.json  item_page.html  search_response.json  search_response_page_1.json
