[package]
name = "finn-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line search and item lookup for FINN Torget using FINN's unofficial web endpoints"
readme = "README.md"
keywords = ["finn", "marketplace", "cli", "torget"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
